--- a/NovaEngine/NovaEngine.vcxproj.filters
+++ b/NovaEngine/NovaEngine.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="Engine\NovaEngine.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\EngineFactory.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="simple_library\private\simple_channel\simple_net_connetion\simple_connetion_tcp.h">
@@ -354,6 +357,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Platform\WindowsEngine.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\EngineMinimal.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\EngineFactory.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
