--- a/NovaEngine/NovaEngine.vcxproj.filters
+++ b/NovaEngine/NovaEngine.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClCompile Include="Engine\EngineFactory.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Core\WinMainCommandParameters.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="simple_library\private\simple_channel\simple_net_connetion\simple_connetion_tcp.h">
@@ -363,6 +366,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Engine\EngineFactory.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\WinMainCommandParameters.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
